<resources>
    <string name="app_name">Android-JSONParsing</string>

    <string name="first_name">First Name : %s</string>
    <string name="last_name">Last Name : %s</string>
    <string name="age">Age : %d</string>
    <string name="address">Address :</string>
    <string name="street">Street : %s</string>
    <string name="city">City : %s</string>
    <string name="state">State : %s</string>
    <string name="postal_code">Postal Code : %s</string>
    <string name="phone">Phone Number :</string>

</resources>
