<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.wim.android_jsonparsing.MainActivity">

    <TextView
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="15sp"
        android:text="@string/first_name" />

    <TextView
        android:id="@+id/last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="15sp"
        android:text="@string/last_name"
        android:layout_below="@+id/first_name" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="15sp"
        android:text="@string/age"
        android:layout_below="@+id/last_name" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="15sp"
        android:text="@string/address"
        android:layout_below="@+id/age" />

    <TextView
        android:id="@+id/street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="15sp"
        android:text="@string/street"
        android:layout_below="@+id/address"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="15sp"
        android:text="@string/city"
        android:layout_below="@+id/street"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="15sp"
        android:text="@string/state"
        android:layout_below="@+id/city"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/postal_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="15sp"
        android:text="@string/postal_code"
        android:layout_below="@+id/state"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="15sp"
        android:text="@string/phone"
        android:layout_below="@+id/postal_code"/>

    <TextView
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="15sp"
        android:layout_below="@+id/phone"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

    <TextView
        android:id="@+id/fax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:textSize="15sp"
        android:layout_below="@+id/home"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

</RelativeLayout>
